TransactionManager is created. Service would be wrapped with @Transactional
ReadOnly, Isolation is implemented.